# drto

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  README.md  _typos.toml  pyproject.toml
.github/workflows/: ci.yml
dev-notes/: README.md
dev-notes/research/: roadmap.md
docs/: api.md  conf.py  examples.md  guide.md  index.md
examples/: binary_column.ipynb  cart_pole.ipynb  double_column.ipynb  first_order.ipynb  hicks.ipynb  hicks_inf.ipynb  hicks_initialize.ipynb  hicks_steady_state.ipynb  initialize.py  plotting.py  quad_tank.ipynb  steady_state.ipynb
examples/models/: README.md  __init__.py  binary_column.py  cart_pole.py  first_order.py  hicks.py  quad_tank.py
examples/models/data/: binary_column.json
features/: 001-drto.info.md  001-info.md  002-declarations.md  002-dyn_2_ss.md  002-dynamic_optimization_and_simulation_declarations.md  003-drto.build_objective.md  003-drto.infinite_horizon.md  004-drto.build_objective.md  004-drto.infinite_horizon.md  004-dynamic_to_steady_state.md  005-drto.dynamic_to_steady_state.md  005-dynamic_optimization.md  006-drto.dynamic_optimization.md  006-drto.dynamic_simulation.md  006-dynamic_simulation.md  007-drto.dynamic_simulation.md  007-drto.steady_state_simulation.md  007-steady_state_simulation.md  008-drto.steady_state_optimization.md  008-drto.steady_state_simulation.md  008-steady_state_optimization.md  009-drto.steady_state_optimization.md  009-initialize_steady_state.md  010-cold_start_dynamic.md  010-drto.initialize_steady_state.md  011-advanced_step_controller.md  011-drto.cold_start_dynamic.md  013-drto.warm_start_dynamic.md  014-asnmpc.md  014-drto.ideal_nmpc.md  015-drto.nonideal_nmpc.md  017-drto.parameterize.md  README.md
src/drto/: __init__.py  declarations.py  dynamic_to_steady_state.py  infinite_horizon.py  info.py  initialize_steady_state.py  objective.py  parameterize.py  steady_state_simulation.py
tests/: test_declarations.py  test_dynamic_to_steady_state.py  test_infinite_horizon.py  test_info.py  test_initialize_steady_state.py  test_objective.py  test_parameterize.py  test_steady_state_simulation.py
